# vision_refactor_project

./: .gitignore  Containerfile  Manual_for_agent.md  README.md  README_DEV.md  launch.bat  pyproject.toml  requirements-dev.txt  requirements.txt
autolabel/: cli.py  launch_gui.py  main.py  requirements.txt  web.py
autolabel_worker/: __init__.py  cli.py  service.py  worker.py
control_plane/: api.py  store.py
core/: README_kernel.md  kernel.py  model_manifest.py  registry.py
deploy/: requirements.txt
deployments/: install.sh
docs/: LOCATE_ANYTHING.md
edge_agent/: __init__.py  cli.py  service.py  worker.py
remote_worker/: __init__.py  api.py
scripts/: README.md  README_scripts.md  add_to_systemd.sh  add_to_systemd_bin.sh  change_pip_conda_source.sh  check.sh  get_frame.sh  prepare_voc_detection_dataset.py  proxy.sh  quickstart.bat  quickstart.ps1  quickstart.sh  rescan.sh  restart_stats.sh  start_stats.sh  start_train_autolabel.sh  status_stats.sh  stop_stats.sh  stop_train_autolabel.sh  terminate.bat  terminate.ps1  terminate.sh
services/: __init__.py
share/: README_share.md
stats_service/: __init__.py  api.py
tests/: test_application_services.py  test_cli_json_summary.py  test_config_validation.py  test_control_plane_e2e.py  test_distributed_roles.py  test_distributed_services.py  test_faster_rcnn_onnx_infer.py  test_local_queue.py  test_model_manifest.py  test_remote_protocol.py  test_service_api.py  test_stats_event.py
train/: cli.py  launch_gui.py  main.py  requirements.txt  web.py
train_worker/: __init__.py  cli.py  service.py  worker.py
(+173 files in other folders)
