[project]
name = "vision-refactor-project"
version = "0.1.0"
description = "Modular vision refactor project (Phase 5 completed)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ultralytics>=8.4.0",
  "opencv-python>=4.9.0",
  "onnx>=1.16.0",
  "onnxruntime>=1.18.0",
  "onnxconverter-common>=1.14.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "PySide6>=6.8.0",
  "lmdb>=1.7.5",
  "decord>=0.6.0",
  "peft",
  "Pillow>=11.1.0",
  "transformers>=4.57.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-subtests",
  "ruff",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
  "autolabel_worker*",
  "common*",
  "control_plane*",
  "core*",
  "edge_agent*",
  "remote_worker*",
  "stats_service*",
  "train_worker*",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
